# taobao_mcp

./: .gitignore  CLAUDE.md  README.md  USAGE.txt  __init__.py  image_utils.py  pyproject.toml  scrape_to_markdown.py  taobao_scraper.py  unified_fetcher.py
knowledge/: TAOBAO_AB_TEST_INVESTIGATION.md  TAOBAO_PAGE_STRUCTURE.md
taobao_mcp/: pyproject.toml  server.py  taobao_scraper.py
